tdf#96479 workaround bookmark end pos handling...

... when inserting text into a text node.

Seems SwTextNode::InsertText doesn't handle bookmark end
positions correctly. This is just handled correctly, if it
also contains the bookmark start.

This workaround simply concats the three strings to be
inserted in advance, so we just have to call
SwTextNode::InsertText once for the whole string.

Change-Id: Iab7708b4cc4df406bdbc3a685c7410e0e797fdc4